Add boilerplates for each recipie

--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+
+        <a href="./recipes/korean-potatoes.html">Korean Potatoes</a>
+
+        <a href="./recipes/steak.html">Grilled Steak</a>
+
+        <a href="./recipes/pouding-chomeur.html">Pouding Chomeur</a>
     </body>
 </html>
