Replaced recipe with Musubi

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
         <a href="./recipes/steak.html">Grilled Steak</a>
 
-        <a href="./recipes/pouding-chomeur.html">Pouding Chomeur</a>
+        <a href="./recipes/musubi.html">Musubi</a>
     </body>
 </html>
