--- a/recipes/musubi.html
+++ b/recipes/musubi.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Pouding Chomeur</title>
+        <title>Musubi</title>
     </head>
     <body>
-        <h1>Pouding Chomeur</h1>
+        <h1>Musubi</h1>
     </body>
 </html>
