Add sections for recipes

--- a/recipes/korean-potatoes.html
+++ b/recipes/korean-potatoes.html
@@ -6,5 +6,25 @@
     </head>
     <body>
         <h1>Korean Potatoes</h1>
+        <img src="../images/korean-potatoes.jpg">
+        <p>TODO: Add description for food item</p>
+
+        <h2>Ingredients</h2>
+
+        <ul>
+            <li>1 1/2 tbsp cooking oil</li>
+            <li>1 lb baby potatoes</li>
+            <li>1 cup water</li>
+            <li>Honey</li>
+            <li>5 tbsp soy sauce</li>
+            <li>4 tbsp maple syrup</li>
+            <li>Sesame seeds for garnish</li>
+        </ul>
+
+        <h2>Steps</h2>
+
+        <ol>
+
+        </ol>
     </body>
 </html>
