--- a/recipes/musubi.html
+++ b/recipes/musubi.html
@@ -6,5 +6,13 @@
     </head>
     <body>
         <h1>Musubi</h1>
+        <img src="../images/musubi.jpg">
+        <p>TODO: Add description for food item</p>
+
+        <h2>Ingredients</h2>
+
+        <ul>
+
+        </ul>
     </body>
 </html>
