Add ingredients to recipes

--- a/recipes/musubi.html
+++ b/recipes/musubi.html
@@ -12,7 +12,20 @@
         <h2>Ingredients</h2>
 
         <ul>
-
+            <li>1 can Spam</li>
+            <li>Short grain sushi rice</li>
+            <li>Rice Vinegar</li>
+            <li>Salt</li>
+            <li>Spam</li>
+            <li>Soy sauce</li>
+            <li>Granulated Sugar</li>
+            <li>Seaweed sheets</li>
         </ul>
+        
+        <h2>Steps</h2>
+
+        <ol>
+
+        </ol>
     </body>
 </html>
