--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -12,7 +12,16 @@
         <h2>Ingredients</h2>
 
         <ul>
-
+            <li>Choice of steak cut</li>
+            <li>Salt</li>
+            <li>Pepper</li>
+            <li>Garlic Powder</li>
         </ul>
+
+        <h2>Steps</h2>
+
+        <ol>
+
+        </ol>
     </body>
 </html>
