Add descriptions to recipes

--- a/recipes/korean-potatoes.html
+++ b/recipes/korean-potatoes.html
@@ -7,7 +7,19 @@
     <body>
         <h1>Korean Potatoes</h1>
         <img src="../images/korean-potatoes.jpg">
-        <p>TODO: Add description for food item</p>
+        <p>Known as Ganja Jorim, these are potatoes cooked down and coated in a sweet
+        and savoury glaze that pairs really well with steamed
+        rice. It’s also delicious enjoyed as is.</p>
+
+        <p>The term jorim means simmering something in a sauce until
+        the sauce has been absorbed/reduced. Similar to dubu jorim
+        (Korean braised tofu), these potatoes are cooked down in a
+        braising sauce.</p>
+
+        <p>The potatoes have that nice chewy bite from the skin
+        but its insides are very soft. I really love dipping these
+        in whatever of the sauce/glaze is left to get more of it
+        on the potatoes.</p>
 
         <h2>Ingredients</h2>
 
