--- a/recipes/musubi.html
+++ b/recipes/musubi.html
@@ -7,7 +7,18 @@
     <body>
         <h1>Musubi</h1>
         <img src="../images/musubi.jpg">
-        <p>TODO: Add description for food item</p>
+        <p>Hawaiian spam musubi is the ideal savory treat when
+        you are on the go or packing for a picnic. 
+        This recipe features sweet and savory caramelized
+        spam which lays on a fluffy bed of seasoned sushi
+        rice wrapped with crispy roasted seaweed.</p>
+
+        <p>Take one bite into this Hawaiian spam musubi and you will 
+        instantly taste the sweet and salty caramelized spam
+        paired with soft and springy, seasoned sushi rice and
+        a touch of roasted seaweed. This spam musubi recipe is
+        so incredibly easy to make with under 10 easy-to-find
+        ingredients and 4 simple steps.</p>
 
         <h2>Ingredients</h2>
 
