--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -7,12 +7,26 @@
     <body>
         <h1>Grilled Steak</h1>
         <img src="../images/steak.jpg">
-        <p>TODO: Add description for food item</p>
+        <p>Learn how to make a grilled ribeye steak dinner 
+        at home; with this easy method your steak will be 
+        perfectly browned and crisp outside, and tender and juicy
+        inside every time!</p>
+
+        <p>Steak dinner is a popular date night meal. 
+        When it’s cooked perfectly, a ribeye is crispy outside
+        and tender and juicy inside with rich meaty flavor. 
+        It’s luscious.</p>
+
+        <p>But there’s absolutely no reason you can’t make a fabulous
+        steak dinner at home – for Valentine’s Day or any date
+        night! Next time an anniversary or special occasion rolls
+        around, cook a beautiful restaurant-quality steak dinner
+        for your sweetie at home and you’ll see just how easy it is.</p>
 
         <h2>Ingredients</h2>
 
         <ul>
-            <li>Choice of steak cut</li>
+            <li>Ribeye steaks</li>
             <li>Salt</li>
             <li>Pepper</li>
             <li>Garlic Powder</li>
