Add steps for Korean Potatoes

--- a/recipes/korean-potatoes.html
+++ b/recipes/korean-potatoes.html
@@ -36,6 +36,20 @@
         <h2>Steps</h2>
 
         <ol>
+            <li>Make sure to thoroughly wash your potatoes and brush off any dirt. If your potatoes are larger than a ping pong ball, I recommend slicing these in half.</li>
+            <li>Mix all the ingredients for the sauce and then set aside. I like mine more on the savoury side with a generous amount of soy sauce. You can easily adjust this to your taste.</li>
+            <li>Place the potatoes on a baking tray and leave to bake for 30-35 minutes at 350F/180C or until the skin of the potatoes are slightly wrinkly and potatoes are almost cooked through.</li>
+            <li>After baking/cooking the potatoes, heat a large pan with a lid over medium high heat. Once hot, add the neutral oil.</li>
+            <li>Place the potatoes and cook for 3-4 minutes until lightly browned on each side.</li>
+            <li>Lower the heat to medium and then pour in the braising sauce.</li>
+            <li>Mix the potatoes and then cover the pan.</li>
+            <li>Leave to simmer over medium heat for 8-10 minutes or until the potatoes are cooked through. The sauce will also slowly thicken from the sugars.</li>
+            <li>Once the sauce has thickened, add in the rice syrup or other liquid sweetener, sesame oil, and sesame seeds.</li>
+            <li>Turn up the heat to medium high until the sauce and sugars start to bubble and then mix the potatoes to coat in the glaze.</li>
+            <li>Keep a close eye on the potatoes since they can easily burn from the sugars. Taste the potatoes and feel free to add more liquid sweetener if you’d like.</li>
+            <li>Serve and enjoy warm or cold. Note that the potatoes will stick and clump together due to the glaze as it cools.</li>
+            <li>You can refrigerate these potatoes but they’re best enjoyed freshly made.</li>
+
 
         </ol>
     </body>
