Add steps for steak

--- a/recipes/korean-potatoes.html
+++ b/recipes/korean-potatoes.html
@@ -9,7 +9,7 @@
         <img src="../images/korean-potatoes.jpg">
         <p>Known as Ganja Jorim, these are potatoes cooked down and coated in a sweet
         and savoury glaze that pairs really well with steamed
-        rice. It’s also delicious enjoyed as is.</p>
+        rice. It's also delicious enjoyed as is.</p>
 
         <p>The term jorim means simmering something in a sauce until
         the sauce has been absorbed/reduced. Similar to dubu jorim
@@ -46,9 +46,9 @@
             <li>Leave to simmer over medium heat for 8-10 minutes or until the potatoes are cooked through. The sauce will also slowly thicken from the sugars.</li>
             <li>Once the sauce has thickened, add in the rice syrup or other liquid sweetener, sesame oil, and sesame seeds.</li>
             <li>Turn up the heat to medium high until the sauce and sugars start to bubble and then mix the potatoes to coat in the glaze.</li>
-            <li>Keep a close eye on the potatoes since they can easily burn from the sugars. Taste the potatoes and feel free to add more liquid sweetener if you’d like.</li>
+            <li>Keep a close eye on the potatoes since they can easily burn from the sugars. Taste the potatoes and feel free to add more liquid sweetener if you'd like.</li>
             <li>Serve and enjoy warm or cold. Note that the potatoes will stick and clump together due to the glaze as it cools.</li>
-            <li>You can refrigerate these potatoes but they’re best enjoyed freshly made.</li>
+            <li>You can refrigerate these potatoes but they're best enjoyed freshly made.</li>
 
 
         </ol>
