--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -13,29 +13,35 @@
         inside every time!</p>
 
         <p>Steak dinner is a popular date night meal. 
-        When it’s cooked perfectly, a ribeye is crispy outside
+        When it's cooked perfectly, a ribeye is crispy outside
         and tender and juicy inside with rich meaty flavor. 
-        It’s luscious.</p>
+        It's luscious.</p>
 
-        <p>But there’s absolutely no reason you can’t make a fabulous
-        steak dinner at home – for Valentine’s Day or any date
+        <p>But there's absolutely no reason you can't make a fabulous
+        steak dinner at home - for Valentine's Day or any date
         night! Next time an anniversary or special occasion rolls
         around, cook a beautiful restaurant-quality steak dinner
-        for your sweetie at home and you’ll see just how easy it is.</p>
+        for your sweetie at home and you'll see just how easy it is.</p>
 
         <h2>Ingredients</h2>
 
         <ul>
             <li>Ribeye steaks</li>
-            <li>Salt</li>
-            <li>Pepper</li>
-            <li>Garlic Powder</li>
+            <li>Extra-vergin olive oil</li>
+            <li>Coarse kosher salt</li>
+            <li>Coarse ground black pepepr</li>
         </ul>
 
         <h2>Steps</h2>
 
         <ol>
-
+            <li>Drizzle olive oil on both sides of the steak.</li>
+            <li>Season both sides with salt and black pepper.</li>
+            <li>Gently rub the seasonings into both sides of the steak.</li>
+            <li>Now your meat is ready to grill</li>
+            <li>Place the steak on the grill, close the grill, and cook for about 6 to 8 minutes on the first side.</li>
+            <li>Flip the steak over and cover the grill again.</li>
+            <li>Cook the steak until it reaches your desired level of doneness.</li>
         </ol>
     </body>
 </html>
