Change grilled steak to grilled ribeye

--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Grilled Steak</title>
+        <title>Grilled Ribeye</title>
     </head>
     <body>
-        <h1>Grilled Steak</h1>
+        <h1>Grilled Ribeye</h1>
         <img src="../images/steak.jpg">
         <p>Learn how to make a grilled ribeye steak dinner 
         at home; with this easy method your steak will be 
