--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <a href="./recipes/korean-potatoes.html">Korean Potatoes</a>
 
-            <a href="./recipes/steak.html">Grilled Steak</a>
+            <a href="./recipes/steak.html">Grilled Ribeye</a>
 
             <a href="./recipes/musubi.html">Musubi</a>
         </ul>
