Edit list in index.html

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <h1>Odin Recipes</h1>
 
         <ul>
-            <a href="./recipes/korean-potatoes.html">Korean Potatoes</a>
+            <li><a href="./recipes/korean-potatoes.html">Korean Potatoes</a></li>
 
-            <a href="./recipes/steak.html">Grilled Ribeye</a>
+            <li><a href="./recipes/steak.html">Grilled Ribeye</a></li>
 
-            <a href="./recipes/musubi.html">Musubi</a>
+            <li><a href="./recipes/musubi.html">Musubi</a></li>
         </ul>
     </body>
 </html>
